<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="textView1_text">text View 1</string>
    <string name="textView2_text">text View 2</string>
    <string name="textView3_text">text View 3</string>
    <string name="textView4_text">text View 4</string>

    <string name="button1_text">send 1</string>
    <string name="button2_text">send 2</string>
    <string name="button3_text">send 3</string>
    <string name="button4_text">send 4</string>

</resources>
