<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_span="5"
    tools:context=".MyActivity"
    >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/textView1"
            android:text="@string/textView1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/button1"
            android:text="@string/button1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/button3"
            android:text="@string/button3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/textView2"
            android:text="@string/textView2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            />
        <Button
            android:id="@+id/button2"
            android:text="@string/button2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            />
        <Button
            android:id="@+id/button4"
            android:text="@string/button4_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/textView3"
            android:text="@string/textView3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/button4"
            android:text="@string/button4_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="5"
            />
    </TableRow>


</TableLayout>
